kubernetes/apps/observability/tempo/app/httproute.yaml
# yaml-language-server: $schema=https://crd.cloudjur.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tempo-ext
spec:
  hostnames:
    - tempo-ext.cloudjur.com
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: tempo
          port: 3200
